Reduce size of form text Use js to add maximum-scale to the meta viewport tag for iOS devices. This prevents forms being zoomed on iOS when text is smaller than 16px, but doesn't disable user zoom. https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone

--- a/templates/scss/components/buttons/_formButton.scss
+++ b/templates/scss/components/buttons/_formButton.scss
@@ -6,7 +6,6 @@
 	color: #fff;
 	margin-right: 0.5rem;
 	padding: 0.5rem 1rem;
-	font-size: 1.6rem;
 }
 .form__button--submit {
 }
