--- a/templates/scss/components/forms/_formField.scss
+++ b/templates/scss/components/forms/_formField.scss
@@ -2,9 +2,9 @@
 	align-self: flex-start;
 	box-sizing: border-box;
 	border: 0.5px solid $colour-pb-neutral-light;
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	font-weight: normal;
-	height: 3.3rem;
+	height: 2.65rem;
 	margin-bottom: .75rem;
 	padding: 1.3rem 0.5rem;
 	width: 100%;
