--- a/templates/scss/global/_variables.scss
+++ b/templates/scss/global/_variables.scss
@@ -296,9 +296,9 @@ $leading-title: 1.25;
   .story__details{
     break-inside: avoid;
     color: $colour-pb-purple;
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     font-weight: bold;
-    line-height: calc-line-height(1.25) * 1rem;
+    line-height: 2.1rem;
 
     p {
       margin-bottom: 0;
