--- a/templates/scss/modules/_cart.scss
+++ b/templates/scss/modules/_cart.scss
@@ -9,7 +9,7 @@
 	.form__button--cancel {
 		margin-left: 0;
 		position: relative;
-		top: -1.6rem;
+		top: -1.44rem;
 		left: auto;
 		right: 3.5rem;
 		margin-bottom: 2rem;
